gcc/testsuite/rust/rustc/ui/parser/suggest_misplaced_generics/fn-simple.rs
// Issue: 103366 , Suggest fix for misplaced generic params
//@ run-rustfix

#[allow(unused)]
fn<T> id(x: T) -> T { x }
// { dg-error "" "" { target *-*-* } .-1 }
// { help "" "" { target *-*-* } .-2 }

fn main() {}

